--- a/1.html
+++ b/1.html
@@ -10,8 +10,10 @@
     <li><a href="1.html">html</a></li>
     <li><a href="2.html">css</a></li>
     <li><a href="3.html">javascript</a></li>
-</ol>
+  </ol>
 <h2>html</h2>
+<p><iframe width="450" height="300" src="https://www.youtube.com/embed/ORI4-EXhgC4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 <ul>
   <li>문영빈</li>
   <li>김유정</li>
@@ -19,12 +21,35 @@
 </ul>
 <h1>creatailer</h1>
 성공하자 <strong>all <u>of</u> creatailer</strong>
-나는 꼭 <a href="https://www.w3.org/TR/html51/textlevel-semantics.html#the-a-element" target="blank" title="문영빈 specification">성공</a>할 것이다 우리집을
-부자로 만들것이다<p>This is some text in a paragraph.룰루랄라 문영빈 파이팅</p>
+나는 꼭 <a href="https://www.w3.org/TR/html51/textlevel-semantics.html#the-a-element" target="blank" title="문영빈 specification">성공</a>할 것이다 나는 부자가 될거야
+<p>This is some text in a paragraph.룰루랄라 문영빈 파이팅</p>
 
 <img src="money.jpg" width="60%" alt="">
 부자로 만들것이다<p style="margin-top:90px">
   This is some text in a paragraph.룰루랄라 문영빈 파이팅
+</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-lhlo1pkpsm.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 </p>
 </body>
 </html>
